# kmgk

./: CMakeLists.txt  LICENSE  METADATA  NOTICE
.github/workflows/: stales.yml
gatekeeper/: Android.mk  android.hardware.gatekeeper@1.0-service.optee.rc  optee_gatekeeper_device.cpp  optee_gatekeeper_device.h  optee_ipc.cpp  optee_ipc.h  service.cpp
gatekeeper/ta/: Android.mk  Makefile  failure_record.c  failure_record.h  gatekeeper_ta.c  sub.mk  ta_gatekeeper.h  user_ta_header_defines.h
gatekeeper/ta/include/: gatekeeper_ipc.h
keymaster/: Android.bp  Android.mk  OpteeKeymaster.cpp  android.hardware.keymaster@3.0-service.optee.rc  optee_keymaster.cpp  optee_keymaster.h  optee_keymaster_ipc.c  optee_keymaster_ipc.h  service.cpp
keymaster/3.0/: OpteeKeymaster3Device.cpp  android.hardware.keymaster@3.0-service.optee.rc  android.hardware.keymaster@3.0-service.optee.xml  optee_keymaster3_device.cpp  service.cpp
keymaster/include/optee_keymaster/: OpteeKeyMintDevice.h  OpteeKeyMintOperation.h  OpteeKeymaster.h  OpteeKeymaster3Device.h  OpteeRemotelyProvisionedComponentDevice.h  OpteeSecureClock.h  OpteeSharedSecret.h  optee_keymaster.h  optee_keymaster3_device.h
keymaster/ipc/: optee_keymaster_ipc.cpp
keymaster/keymint/: OpteeKeyMintDevice.cpp  OpteeKeyMintOperation.cpp  OpteeRemotelyProvisionedComponentDevice.cpp  OpteeSecureClock.cpp  OpteeSharedSecret.cpp  android.hardware.security.keymint-service.optee.rc  service.cpp
keymaster/ta/: Android.mk  Makefile  asn1.c  attestation.c  auth.c  build_executable.mk  crypto_aes.c  crypto_ec.c  crypto_rsa.c  generator.c  keystore_ta.c  master_crypto.c  mbedtls_proxy.c  operations.c  paddings.c  parameters.c  parsel.c  shift.c  sub.mk  tables.c  user_ta_header_defines.h
keymaster/wait/: Android.bp.bu  Android.mk.bu  Keymaster.cpp  Keymaster.h  wait_for_keymaster_optee.cpp  wait_for_keymaster_optee.rc
test/functional/: Android.bp  AndroidTest.xml  attestation_record.cpp  keymaster_hidl_hal_test.cpp  keymaster_tags.h
yaml-cpp/: .Android.mk.swp  Android.mk
(+24 files in other folders)
